# mybatis-xml-convertor

./: .gitignore  README.md  pyproject.toml
mybatis_xml_convertor/: mybatis_util.py
mybatis_xml_convertor/mybatis_ext/: inner_template.jinja  mybatis_manager.py
tests/: mybatis_util_test.py
tests/jinja2_test/: inner_template.jinja  jinja2_test.py  jsql_util.py  test.template  test.xml
tests/jinja2_test/test/: test2.xml
